ui: Fix alert dialog close button placed off screen
Made minimal css change to ensure that the content of alert dialogs
don't overflow the parent and cause the alert dialog close button to be
placed offscreen.

Bug: T287226

--- a/vue/src/assets/styles/index.css
+++ b/vue/src/assets/styles/index.css
@@ -153,6 +153,7 @@ div.list-card__card {
 
 #notifications .v-alert {
 	border: thin solid currentColor !important;
+	overflow-wrap: anywhere !important;
 }
 
 div.v-slide-group.compact-arrows > .v-slide-group__next,
